--- a/blog-detail.html
+++ b/blog-detail.html
@@ -18,7 +18,8 @@
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-black custom-header">
-    <a class="navbar-brand"  href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <a class="navbar-brand" href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png"
+        class="img-fluid" alt="" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
@@ -99,6 +100,42 @@
       Some projects create different activities where they reward their community for using their products and services,
       other projects create different discounts and loyalty programs for community members. And a strong and supportive
       community is able to spend much more on your goods than other internet users.</p>
+    <h3 class="my-5">What will you get with the help of community?</h3>
+    <p>There are even more advantages of creating the community than just of increasing the profit. Let’s look on just a
+      part of the benefits:</p>
+    <p>1. Content. Community asks questions you may answer as well as community offers you ideas to post.
+    </p>
+    <p>2. Free promotion. Community shares the experience and advises friends or family to use your goods or services.
+    </p>
+    <p>3. Traffic. Community follows your social media to get all the news that increases the traffic to your website
+      and
+      social media.</p>
+    <p>4. Resources. Community helps you to find ways to promote and develop your project.</p>
+    <p>5. Advice, critics, new options, ideas.</p>
+    <p>6. Advice, critics, new options, ideas.</p>
+    <h3 class="my-5">How to create a strong and supportive community?</h3>
+    <p>
+      Crypto projects are fully driven by the online world. Without an online community, they wouldn’t be able to get
+      their expand their network.<br />
+
+      In order to be visible, you need to combine all online efforts. You should analyze all your targeted audience, its
+      interests, problems, wishes, and so on. Then you need to analyze all the tags they use to find you and all the
+      topics they want to read. And then you need to start creating the content, answer all the comments and questions
+      you get in all your social media, coordinate all the chats with the discussion of the platform…<br />
+
+      And there is one more option! You can go on doing your business or fundraising and delegate the creation of a
+      strong and supportive community as well as community management to Vitor Services.<br />
+    </p>
+    <h3 class="my-5">How to create a strong and supportive community?</h3>
+    <p>1. Save this promo code: <b>COMMUNITY</b>;</p>
+    <p>2. Send it to any Vitor Services agent to get your 10% bonus on our “Growth Hacking Package”;</p>
+    <p>3. Make a payment and start watching ?</p>
+    <h3 class="my-5">Let’s summarize…</h3>
+    <p>A community plays a key role in the promotion and expansion of your project. If your community member post or ask
+      anything about your product in social media it means that he/she is already a part of your community. The global
+      community is necessary for mass adoption and recognition.<br />
+
+      Let’s create a healthy and loyal enthusiast base for your project with Vitor Services.</p>
   </div>
 </section>
 <footer>
