--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,8 @@
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-black custom-header">
-    <a class="navbar-brand"  href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <a class="navbar-brand" href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png"
+        class="img-fluid" alt="" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
@@ -86,12 +87,7 @@
             </a>
             <p>
               An Initial Exchange Offering (IEO) is an improvement of the Initial Coin Offering (ICO). Unlike the ICO,
-              an IEO operates through a platform backed by a cryptocurrency exchange. Basically, this is to say that the
-              crypto exchanges are the ones that administer the fundraising process.
-
-              In an IEO, the project teams behind a certain token do not have a direct correspondence with the investor.
-              Instead, the project team approaches a cryptocurrency exchange and pitches the idea behind their token.
-              Then, the crypto exchange conducts detailed research on the viability and feasibility of the Project.
+              an IEO operates…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -122,16 +118,12 @@
             <img class="img-fluid mb-3" src="./img/blog/4.jpeg" alt="" />
             <a href="#">
               <a href="#">
-                <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+                <h3>THE CURRENT STATE OF THE IEO MARKET</h3>
               </a>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              Initial Exchange Offerings are the New Hot Ticket The Initial Exchange Offering (IEO) is a new approach to
+              crypto-finance and…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -142,15 +134,11 @@
           <div class="card-body">
             <img class="img-fluid mb-3" src="./img/blog/5.jpeg" alt="" />
             <a href="#">
-              <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+              <h3>3 KEY FACTORS FOR POST-ICO SUCCESS</h3>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              People are so focused on the fundraising side of the phenomenon that they forget to address the most
+              essential matter:…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -161,15 +149,11 @@
           <div class="card-body">
             <img class="img-fluid mb-3" src="./img/blog/6.jpeg" alt="" />
             <a href="#">
-              <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+              <h3>WHAT’S THE BEST ICO MARKETING STRATEGY?</h3>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              Be active. Do not hide. Show that you are real, show your activeness. Social MediaPR Create a conversion
+              funnel, an…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -180,15 +164,11 @@
           <div class="card-body">
             <img class="img-fluid mb-3" src="./img/blog/7.jpeg" alt="" />
             <a href="#">
-              <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+              <h3>PAID PROMOTION & ICO ADVERTISING</h3>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              Marketing for an ICO has no set costs, however, as a business owner, you must think about the complete
+              process…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -199,15 +179,11 @@
           <div class="card-body">
             <img class="img-fluid mb-3" src="./img/blog/8.jpeg" alt="" />
             <a href="#">
-              <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+              <h3>CRYPTOCURRENCY SEARCH ENGINE OPTIMISATION (SEO) & GUEST BLOGGING</h3>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              If implemented correctly, SEO can hold tremendous value for improving the long term growth of an ICO. SEO
+              Content Easily…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
@@ -218,15 +194,26 @@
           <div class="card-body">
             <img class="img-fluid mb-3" src="./img/blog/9.jpeg" alt="" />
             <a href="#">
-              <h3>WHY WILL YOUR STARTUP DIE A COMMUNITY?</h3>
+              <h3>HOW TO PROMOTE AN ICO?</h3>
             </a>
             <p>
-              “It costs 80% more to gain a new customer than to retain one”
-              Community is extremely important for any crypto project. A
-              strong and supportive community is able to bring a project a
-              tremendous success. And likewise perfect ideas will die without
-              the community promotion. So, the first step you should take to
-              create a community is to find your brand audience.
+              Building an initial community with a whitelistA successful whitelisting campaign will build an initial
+              community of members who are interested…
+            </p>
+            <a href="#" class="btn custom-btn-blog">Read more</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div id="card-blog" class="card custom-card-blog">
+          <div class="card-body">
+            <img class="img-fluid mb-3" src="./img/blog/19.jpeg" alt="" />
+            <a href="#">
+              <h3>CREATING WEBSITE AND SOCIAL MEDIA</h3>
+            </a>
+            <p>
+              Develop A Lead Generating Website For Your ICO This is an opportunity to develop a website for your
+              startup if you have…
             </p>
             <a href="#" class="btn custom-btn-blog">Read more</a>
           </div>
