--- a/vitor-services.html
+++ b/vitor-services.html
@@ -10,8 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
-    <link rel="stylesheet" href="./css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./css/owl.theme.default.css">
+  <link rel="stylesheet" href="./css/owl.carousel.min.css">
+  <link rel="stylesheet" href="./css/owl.theme.default.css">
   <link rel="stylesheet" href="./css/pc.css" media="all" />
   <link rel="stylesheet" href="./css/tablet.css" media="all and (max-width:1023px) and (min-width:768px)" />
   <link rel="stylesheet" href="./css/mobile.css" media="all and (max-width:767px)" />
@@ -20,7 +20,8 @@
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-black custom-header">
-    <a class="navbar-brand" href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png" class="img-fluid" alt="" /></a>
+    <a class="navbar-brand" href="./vitor-services.html"><img class="logo-header" src="./img/лого-1.png"
+        class="img-fluid" alt="" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
@@ -140,7 +141,7 @@
         </div>
         <div class="col-md-7 order-md-2">
           <h3>
-            THIRD STEP</h3>
+            FIRST STEP</h3>
           <p>We will write the White Paper so well that it will make the investors confident in the success of a
             project.</p>
           <p>Our specialists from the marketing department will work thoroughly over the individual strategy of
@@ -163,16 +164,16 @@
         <div class="col-md-7 order-md-1">
           <h3>
             SECOND STEP</h3>
-          <p>We will write the White Paper so well that it will make the investors confident in the success of a
-            project.</p>
-          <p>Our specialists from the marketing department will work thoroughly over the individual strategy of
-            promotion for your project.</p>
-          <p>We will create relevant content and get it distributed among crypto space.</p>
+          <p>Our PR department will make sure your project doesn’t stay unnoticed. It will be well-known amongst all
+            crypto-based platforms, and it will be continuously mentioned on social media. </p> <br>
+          <p>Because of this, the loyalty of investors will increase, and exchanges won’t be able to refuse in the
+            listing of a project that everyone is talking about.</p>
           <ul>
-            <li><i class="fas fa-circle mr-2"></i>Writing of White Paper</li>
-            <li><i class="fas fa-circle mr-2"></i>Building of marketing strategy</li>
+            <li><i class="fas fa-circle mr-2"></i>Fundraising & IR</li>
             <li><i class="fas fa-circle mr-2"></i>
-              Content Marketing</li>
+              Exchanges & IEO</li>
+            <li><i class="fas fa-circle mr-2"></i>Press Releases</li>
+            <li><i class="fas fa-circle mr-2"></i>Forums & SMM</li>
           </ul>
           <button class="custom-button-findout mb-5">Find out more <i
               class="ml-1 fas fa-long-arrow-alt-right"></i></button>
@@ -184,17 +185,17 @@
         </div>
         <div class="col-md-7 order-md-2">
           <h3>
-            FIRST STEP</h3>
-          <p>We will write the White Paper so well that it will make the investors confident in the success of a
-            project.</p>
-          <p>Our specialists from the marketing department will work thoroughly over the individual strategy of
-            promotion for your project.</p>
-          <p>We will create relevant content and get it distributed among crypto space.</p>
+            THIRD STEP</h3>
+          <p>Is anyone interested in a project with a large fan base around it, except for its creators? The answer is
+            obvious. Two previous steps were the foundation for the final and most important part, according to which
+            the trust and loyalty of the crypto community will be at a maximum.</p>
+          <p>We will create a powerful community around your project and will send loyal followers in the needed
+            direction. Your only requirement is to trust us, and we will take care of everything.</p>
           <ul>
-            <li><i class="fas fa-circle mr-2"></i>Writing of White Paper</li>
-            <li><i class="fas fa-circle mr-2"></i>Building of marketing strategy</li>
+            <li><i class="fas fa-circle mr-2"></i>Community Creation & Management</li>
+            <li><i class="fas fa-circle mr-2"></i>Guerrilla & Influence Marketing</li>
             <li><i class="fas fa-circle mr-2"></i>
-              Content Marketing</li>
+              Local Marketing</li>
           </ul>
           <button class="custom-button-findout mb-5">Find out more <i
               class="ml-1 fas fa-long-arrow-alt-right"></i></button>
@@ -207,99 +208,99 @@
       <i style="margin-right: 10px; " class="far fa-envelope-open"></i>Get Full Commercial Deck</a>
   </div>
   <div class="container text-center element-1-victor ">
-      <h1 class="title-element-1-victor">COMPLETED PROJECTS</h1>
-      <div class="element-row-1-victor">
-        <div class="row">
-          <div class="col-md-4 col-12">
-              <div class="project-card">
-                  <div class="thumbnail-projects">
-                      <img width="75%" height="75%" src="./img/projects/thumb1.jpg" />
-                  </div>
-                  <div class="content-projects-container-victor">
-                      <div class="title-projects text-left">CRYPTOKNOWMICS</div>
-                      <div class="content-projects-details-victor">
-                        <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
-                          <p>Cryptoknowmics is an innovative and decentralized platform that serves almost every
-                              aspect of
-                              the crypto space. It aims to be the top destination and the largest media portal in
-                              the
-                              crypto space and the all-in-one solution for information and services for the
-                              industry.
-                          </p>
-                      </div>
-                      <div class="text-left">
-                        <p><strong>stage:</strong> Finished</p>
-                        <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
-                      </div>
-                  </div>
-                  <div style="font-size: 0.5rem;" class="end-project-card-victor">
-                    <i class="fas fa-globe-americas fa-3x"></i>
-                    <i class="fab fa-telegram-plane fa-3x"></i>
-                    <i class="fab fa-twitter fa-3x"></i>
-                  </div>
+    <h1 class="title-element-1-victor">COMPLETED PROJECTS</h1>
+    <div class="element-row-1-victor">
+      <div class="row">
+        <div class="col-md-4 col-12">
+          <div class="project-card">
+            <div class="thumbnail-projects">
+              <img width="75%" height="75%" src="./img/projects/thumb1.jpg" />
+            </div>
+            <div class="content-projects-container-victor">
+              <div class="title-projects text-left">CRYPTOKNOWMICS</div>
+              <div class="content-projects-details-victor">
+                <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
+                <p>Cryptoknowmics is an innovative and decentralized platform that serves almost every
+                  aspect of
+                  the crypto space. It aims to be the top destination and the largest media portal in
+                  the
+                  crypto space and the all-in-one solution for information and services for the
+                  industry.
+                </p>
               </div>
+              <div class="text-left">
+                <p><strong>stage:</strong> Finished</p>
+                <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
+              </div>
+            </div>
+            <div style="font-size: 0.5rem;" class="end-project-card-victor">
+              <i class="fas fa-globe-americas fa-3x"></i>
+              <i class="fab fa-telegram-plane fa-3x"></i>
+              <i class="fab fa-twitter fa-3x"></i>
+            </div>
           </div>
-          <div class="col-md-4 col-12">
-              <div class="project-card">
-                  <div class="thumbnail-projects">
-                      <img width="75%" height="75%" src="./img/projects/thumb2.jpg" />
-                  </div>
-                  <div class="content-projects-container">
-                      <div class="title-projects text-left">ADAB SOLUTIONS</div>
-                      <div class="content-projects-details-victor">
-                        <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
-                          <p>ADAB Solutions is developing the FICE – First Islamic Crypto Exchange, based on the
-                              norms
-                              of
-                              Shariah</p>
-                      </div>
-                      <div class="text-left">
-                        <p><strong>stage:</strong> Finished</p>
-                        <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
-                      </div>
-                  </div>
-                  <div style="font-size: 0.5rem;" class="end-project-card-victor">
-                    <i class="fas fa-globe-americas fa-3x"></i>
-                    <i class="fab fa-telegram-plane fa-3x"></i>
-                    <i class="fab fa-twitter fa-3x"></i>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="project-card">
+            <div class="thumbnail-projects">
+              <img width="75%" height="75%" src="./img/projects/thumb2.jpg" />
+            </div>
+            <div class="content-projects-container">
+              <div class="title-projects text-left">ADAB SOLUTIONS</div>
+              <div class="content-projects-details-victor">
+                <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
+                <p>ADAB Solutions is developing the FICE – First Islamic Crypto Exchange, based on the
+                  norms
+                  of
+                  Shariah</p>
+              </div>
+              <div class="text-left">
+                <p><strong>stage:</strong> Finished</p>
+                <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
+              </div>
+            </div>
+            <div style="font-size: 0.5rem;" class="end-project-card-victor">
+              <i class="fas fa-globe-americas fa-3x"></i>
+              <i class="fab fa-telegram-plane fa-3x"></i>
+              <i class="fab fa-twitter fa-3x"></i>
 
-                  </div>
-              </div>
+            </div>
           </div>
-          <div class="col-md-4 col-12">
-              <div class="project-card">
-                  <div class="thumbnail-projects">
-                      <img width="75%" height="75%" src="./img/projects/thumb3.jpg" />
-                  </div>
-                  <div class="content-projects-container">
-                      <div class="title-projects text-left">EIPLATFORM</div>
-                      <div class="content-projects-details-victor">
-                        <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
-                          <p>EIP is developing a platform to enable direct interaction between brands and people
-                              in
-                              the
-                              Esports sector. Reaching the next generation audience via data-driven mass
-                              personalisation.
-                          </p>
-                      </div>
-                      <div class="text-left">
-                        <p><strong>stage:</strong> Finished</p>
-                        <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
-                      </div>
-                  </div>
-                  <div style="font-size: 0.5rem;" class="end-project-card-victor">
-                    <i class="fas fa-globe-americas fa-3x"></i>
-                    <i class="fab fa-telegram-plane fa-3x"></i>
-                    <i class="fab fa-twitter fa-3x"></i>
-                  </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="project-card">
+            <div class="thumbnail-projects">
+              <img width="75%" height="75%" src="./img/projects/thumb3.jpg" />
+            </div>
+            <div class="content-projects-container">
+              <div class="title-projects text-left">EIPLATFORM</div>
+              <div class="content-projects-details-victor">
+                <img class="img-content-projects-details-victor" src="img/Victor-services/15.png" alt="">
+                <p>EIP is developing a platform to enable direct interaction between brands and people
+                  in
+                  the
+                  Esports sector. Reaching the next generation audience via data-driven mass
+                  personalisation.
+                </p>
               </div>
-          </div> 
+              <div class="text-left">
+                <p><strong>stage:</strong> Finished</p>
+                <p class="p-end-victor"><strong>Project Token:</strong>MYTV</p>
+              </div>
+            </div>
+            <div style="font-size: 0.5rem;" class="end-project-card-victor">
+              <i class="fas fa-globe-americas fa-3x"></i>
+              <i class="fab fa-telegram-plane fa-3x"></i>
+              <i class="fab fa-twitter fa-3x"></i>
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
-  <div class="button-victor-services animate-goup text-center">
-    <a href="" class="btn-victor-services-3">
-      <i style="margin-right: 10px;" class="far fa-star"></i>View all project</a>
-  </div>
+    </div>
+    <div class="button-victor-services animate-goup text-center">
+      <a href="" class="btn-victor-services-3">
+        <i style="margin-right: 10px;" class="far fa-star"></i>View all project</a>
+    </div>
 </section>
 <section>
   <div class="text-center">
@@ -311,54 +312,54 @@
       <div class="carousel-item active">
         <div class="container-box-victor clearfix">
           <div class="img-box-feedbacks text-center">
-              <img class="img-fluid" src="img/feedbacks/1.jpg" alt="">
+            <img class="img-fluid" src="img/feedbacks/1.jpg" alt="">
           </div>
           <div class="text-box-feedbacks">
-              <h2>Alexander Kapfhammer</h2>
-              <p>CMO - INNOU </p>
-              <span>
-                  The collaboration with Vitor Services was good and we 
-                  gained new community members in our social media platforms – 
-                  especially on Medium and Reddit. They answered very quick and were
-                  open to any request we had. <br>
-                  Enjoyed the work.
-              </span>
+            <h2>Alexander Kapfhammer</h2>
+            <p>CMO - INNOU </p>
+            <span>
+              The collaboration with Vitor Services was good and we
+              gained new community members in our social media platforms –
+              especially on Medium and Reddit. They answered very quick and were
+              open to any request we had. <br>
+              Enjoyed the work.
+            </span>
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container-box-victor clearfix">
           <div class="img-box-feedbacks text-center">
-              <img class="img-fluid" src="img/feedbacks/2.jpg" alt="">
+            <img class="img-fluid" src="img/feedbacks/2.jpg" alt="">
           </div>
           <div class="text-box-feedbacks">
-              <h2>Alexander Kapfhammer</h2>
-              <p>CMO - INNOU </p>
-              <span>
-                We are quite happy to work with Vitor Services which is quite professional at 
-                community expand and various of social channel growth. That is of great importance 
-                for project progress and brand awareness. I would like to recommend them to any project
-                 who aims to increase social channel presence,growing communities. 
-                May a better future for Vitor Service and Long Last the cooperation between us. Much appreciated!
-              </span>
+            <h2>Alexander Kapfhammer</h2>
+            <p>CMO - INNOU </p>
+            <span>
+              We are quite happy to work with Vitor Services which is quite professional at
+              community expand and various of social channel growth. That is of great importance
+              for project progress and brand awareness. I would like to recommend them to any project
+              who aims to increase social channel presence,growing communities.
+              May a better future for Vitor Service and Long Last the cooperation between us. Much appreciated!
+            </span>
           </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container-box-victor clearfix">
           <div class="img-box-feedbacks text-center">
-              <img class="img-fluid" src="img/feedbacks/3.jpg" alt="">
+            <img class="img-fluid" src="img/feedbacks/3.jpg" alt="">
           </div>
           <div class="text-box-feedbacks">
-              <h2>Alexander Kapfhammer</h2>
-              <p>CMO - INNOU </p>
-              <span>
-                  The collaboration with Vitor Services was good and we 
-                  gained new community members in our social media platforms – 
-                  especially on Medium and Reddit. They answered very quick and were
-                  open to any request we had. <br>
-                  Enjoyed the work.
-              </span>
+            <h2>Alexander Kapfhammer</h2>
+            <p>CMO - INNOU </p>
+            <span>
+              The collaboration with Vitor Services was good and we
+              gained new community members in our social media platforms –
+              especially on Medium and Reddit. They answered very quick and were
+              open to any request we had. <br>
+              Enjoyed the work.
+            </span>
           </div>
         </div>
       </div>
@@ -368,7 +369,7 @@
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next arr-next-victor" href="#carouselExampleControls" role="button" data-slide="next">
-     <i class="fas fa-arrow-right fa-3x"></i>
+      <i class="fas fa-arrow-right fa-3x"></i>
       <span class="sr-only">Next</span>
     </a>
   </div>
